--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+eframe = "0.14.0"
+enigo = { git = "https://github.com/enigo-rs/enigo" }
+tauri-hotkey = "0.1.2"
